# MCP

ai-agent-for-code/: main.py  pyproject.toml  server.py
client/: airbnb-client.py  client.py  output.json  pyproject.toml  weather.py
hello/: pyproject.toml  weather.py
mcp-prompts-and-inputs/: main.py  prompt.py  pyproject.toml
mcp-server-deployment/: pyproject.toml
mcp-server-deployment/src/mcpserver/: deployment.py
mcp-server-functionality/: crypto.py  local.py  notes.txt  otherinputs.py  pyproject.toml  sceenshot.py  websearch.py
mcp-server-streamable/: pyproject.toml  server.py
